:bug: [FIX] Create contact
